--- a/Project_Final.ipynb
+++ b/Project_Final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 478,
    "id": "8566c6bb-8e1e-4258-ae8b-2528ea089af0",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": 479,
    "id": "e2052a0d-f8e6-4afd-8d56-59ffc5a15d20",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        "4             500         66  "
       ]
      },
-     "execution_count": 442,
+     "execution_count": 479,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": 480,
    "id": "d9be1efc-e1c6-49ed-9abc-cb52bbf9707a",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 444,
+   "execution_count": 481,
    "id": "3dfdece7-a228-414c-ab6a-aa208653a031",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
        "4            66  "
       ]
      },
-     "execution_count": 444,
+     "execution_count": 481,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 445,
+   "execution_count": 482,
    "id": "5806ce3e-884a-4b8c-a207-bcd4867d72b7",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 446,
+   "execution_count": 483,
    "id": "af83f9a8-296f-4e83-9c29-7fdb73281d51",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 447,
+   "execution_count": 484,
    "id": "97b607f4-6b20-4d11-8c05-88f39123c818",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 448,
+   "execution_count": 485,
    "id": "f0e5e596-5997-4954-8129-275be9305032",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
        "4            66  "
       ]
      },
-     "execution_count": 448,
+     "execution_count": 485,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 486,
    "id": "4a69bc94-cef9-4a38-a94d-8d20600170a6",
    "metadata": {},
    "outputs": [
@@ -477,7 +477,7 @@
        "2935.9375"
       ]
      },
-     "execution_count": 449,
+     "execution_count": 486,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 450,
+   "execution_count": 487,
    "id": "b46bb4a1-202f-45bf-b5fd-ddc7e13867bd",
    "metadata": {},
    "outputs": [],
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 451,
+   "execution_count": 488,
    "id": "1a30977e-f9c7-42f6-b002-9a7ba68a4ce1",
    "metadata": {},
    "outputs": [
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 452,
+   "execution_count": 489,
    "id": "b313eceb-3785-4aa2-a68b-1f4d079bbf58",
    "metadata": {},
    "outputs": [],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 453,
+   "execution_count": 490,
    "id": "22107d46-39b8-4d83-8fbe-0da58f5e6288",
    "metadata": {},
    "outputs": [],
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 491,
    "id": "d5e449d0-7cb8-469d-b862-d8a5b99ad430",
    "metadata": {},
    "outputs": [],
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 455,
+   "execution_count": 492,
    "id": "889c7992-485e-4414-8a27-98cc29216680",
    "metadata": {},
    "outputs": [
@@ -633,7 +633,7 @@
     "# Show the plot\n",
     "plt.show()\n",
     "#Export Figure to Image Cache as PNG filetype\n",
-    "plt.savefig(\"Images/Active_Day_For_Mood.png\")\n",
+    "plt.savefig(\"Images/Trendline.png\")\n",
     "\n",
     "# Deriving results\n",
     "print(f\"Slope of the trendline: {slope}\")\n",
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 456,
+   "execution_count": 493,
    "id": "26ebbbd0-47b1-435f-b043-516ef1900e74",
    "metadata": {},
    "outputs": [
@@ -772,7 +772,7 @@
        "4    Active            66  "
       ]
      },
-     "execution_count": 456,
+     "execution_count": 493,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 494,
    "id": "89f7c68c-f223-432c-85eb-f8b5312c51a0",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,7 @@
     "plt.legend([200, 100, 300], title=\"Mood\", loc=\"center left\", bbox_to_anchor=(1, 0, 0.5, 1))\n",
     "plt.title(\"Display of Mood\")\n",
     "#Export Figure to Image Cache as PNG filetype\n",
-    "plt.savefig(\"Images/Active_Day_For_Mood.png\")\n",
+    "plt.savefig(\"Images/Display_Of_Mood.png\")\n",
     "plt.show()\n"
    ]
   },
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 495,
    "id": "7bb016b4-b3d9-4cfd-87a5-dc51447afcd1",
    "metadata": {},
    "outputs": [
@@ -873,14 +873,14 @@
     "plt.tight_layout()\n",
     "\n",
     "#Export Figure to Image Cache as PNG filetype\n",
-    "plt.savefig(\"Images/Active_Day_For_Mood.png\")\n",
+    "plt.savefig(\"Images/Boolean_Histogram.png\")\n",
     "#Show Plot\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 496,
    "id": "535f0bfe-0e8a-48da-bfbf-d941b08b6413",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 497,
    "id": "c2356f60-0ae0-4291-994b-a20e82ed92dc",
    "metadata": {},
    "outputs": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 498,
    "id": "de2cb853-0ec2-4b28-98c4-5b0bde2715f4",
    "metadata": {},
    "outputs": [
@@ -972,7 +972,7 @@
     "plt.legend(active_counts.index, title=\"Status\", loc=\"center left\", bbox_to_anchor=(1, 0, 0.5, 1))\n",
     "plt.title(\"Distribution of Active vs Inactive Days\")\n",
     "#Export Figure to Image Cache as PNG filetype\n",
-    "plt.savefig(\"Images/Active_Day_For_Mood.png\")\n",
+    "plt.savefig(\"Images/Active_vs_Inactive_Day.png\")\n",
     "plt.show()"
    ]
   },
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 499,
    "id": "1bbabb09-d209-405e-954f-a4a5b3f16ea6",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1018,7 @@
     "plt.title(\"Calories Burned Distribution by Active State\")\n",
     "plt.grid(True)\n",
     "#Export Figure to Image Cache as PNG filetype\n",
-    "plt.savefig(\"Images/Active_Day_For_Mood.png\")\n",
+    "plt.savefig(\"Images/box_and_whisker.png\")\n",
     "plt.show()"
    ]
   },
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 500,
    "id": "85fca0a3-1357-413d-88ab-0b2481bc5fa8",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
     "plt.title(\"Distribution of Calories Burned\")\n",
     "plt.grid(True)\n",
     "#Export Figure to Image Cache as PNG filetype\n",
-    "plt.savefig(\"Images/Active_Day_For_Mood.png\")\n",
+    "plt.savefig(\"Images/Calories_Burned_Histogram.png\")\n",
     "plt.show()"
    ]
   },
@@ -1088,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 501,
    "id": "cd1cb6a2-8217-45fa-a413-bceff6eca020",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 502,
    "id": "ea9a9fe1-0b3b-4ff1-853a-441440e82302",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 503,
    "id": "3009e90c-5bcc-4f30-b647-5c3bf7530528",
    "metadata": {},
    "outputs": [
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 504,
    "id": "0b5547c9-b19a-4ce2-9bd2-e73a4dc0253f",
    "metadata": {},
    "outputs": [],
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 505,
    "id": "6e724529-5dab-47c2-8108-4196456e0d1b",
    "metadata": {},
    "outputs": [
@@ -1303,7 +1303,7 @@
        "27            64       True           True  "
       ]
      },
-     "execution_count": 468,
+     "execution_count": 505,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1334,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 506,
    "id": "ce2f551e-0b4c-4325-a5e8-a3ba0bd06150",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 507,
    "id": "a5463043-7baf-49aa-a8de-cc67cd22620d",
    "metadata": {},
    "outputs": [
@@ -1801,7 +1801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 508,
    "id": "85f40596-4888-4675-bcfe-1a7924f8dbf2",
    "metadata": {},
    "outputs": [
@@ -1810,27 +1810,27 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_42216\">\n",
+       "<table id=\"T_5d356\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_42216_level0_col0\" class=\"col_heading level0 col0\" >Statistic</th>\n",
-       "      <th id=\"T_42216_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
+       "      <th id=\"T_5d356_level0_col0\" class=\"col_heading level0 col0\" >Statistic</th>\n",
+       "      <th id=\"T_5d356_level0_col1\" class=\"col_heading level0 col1\" >Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_42216_row0_col0\" class=\"data row0 col0\" >Mean Streak Length</td>\n",
-       "      <td id=\"T_42216_row0_col1\" class=\"data row0 col1\" >3</td>\n",
+       "      <td id=\"T_5d356_row0_col0\" class=\"data row0 col0\" >Mean Streak Length</td>\n",
+       "      <td id=\"T_5d356_row0_col1\" class=\"data row0 col1\" >3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_42216_row1_col0\" class=\"data row1 col0\" >Count of Streak Lengths</td>\n",
-       "      <td id=\"T_42216_row1_col1\" class=\"data row1 col1\" >32</td>\n",
+       "      <td id=\"T_5d356_row1_col0\" class=\"data row1 col0\" >Count of Streak Lengths</td>\n",
+       "      <td id=\"T_5d356_row1_col1\" class=\"data row1 col1\" >32</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x2ab49936380>"
+       "<pandas.io.formats.style.Styler at 0x2ab50af6ec0>"
       ]
      },
      "metadata": {},
@@ -1841,60 +1841,60 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_50875\">\n",
+       "<table id=\"T_e6e19\">\n",
        "  <thead>\n",
        "    <tr>\n",
-       "      <th id=\"T_50875_level0_col0\" class=\"col_heading level0 col0\" >index</th>\n",
-       "      <th id=\"T_50875_level0_col1\" class=\"col_heading level0 col1\" >Streak Length</th>\n",
-       "      <th id=\"T_50875_level0_col2\" class=\"col_heading level0 col2\" >Positive Mood</th>\n",
+       "      <th id=\"T_e6e19_level0_col0\" class=\"col_heading level0 col0\" >index</th>\n",
+       "      <th id=\"T_e6e19_level0_col1\" class=\"col_heading level0 col1\" >Streak Length</th>\n",
+       "      <th id=\"T_e6e19_level0_col2\" class=\"col_heading level0 col2\" >Positive Mood</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td id=\"T_50875_row0_col0\" class=\"data row0 col0\" >count</td>\n",
-       "      <td id=\"T_50875_row0_col1\" class=\"data row0 col1\" >32</td>\n",
-       "      <td id=\"T_50875_row0_col2\" class=\"data row0 col2\" >32</td>\n",
+       "      <td id=\"T_e6e19_row0_col0\" class=\"data row0 col0\" >count</td>\n",
+       "      <td id=\"T_e6e19_row0_col1\" class=\"data row0 col1\" >32</td>\n",
+       "      <td id=\"T_e6e19_row0_col2\" class=\"data row0 col2\" >32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_50875_row1_col0\" class=\"data row1 col0\" >mean</td>\n",
-       "      <td id=\"T_50875_row1_col1\" class=\"data row1 col1\" >3</td>\n",
-       "      <td id=\"T_50875_row1_col2\" class=\"data row1 col2\" >1</td>\n",
+       "      <td id=\"T_e6e19_row1_col0\" class=\"data row1 col0\" >mean</td>\n",
+       "      <td id=\"T_e6e19_row1_col1\" class=\"data row1 col1\" >3</td>\n",
+       "      <td id=\"T_e6e19_row1_col2\" class=\"data row1 col2\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_50875_row2_col0\" class=\"data row2 col0\" >std</td>\n",
-       "      <td id=\"T_50875_row2_col1\" class=\"data row2 col1\" >2</td>\n",
-       "      <td id=\"T_50875_row2_col2\" class=\"data row2 col2\" >1</td>\n",
+       "      <td id=\"T_e6e19_row2_col0\" class=\"data row2 col0\" >std</td>\n",
+       "      <td id=\"T_e6e19_row2_col1\" class=\"data row2 col1\" >2</td>\n",
+       "      <td id=\"T_e6e19_row2_col2\" class=\"data row2 col2\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_50875_row3_col0\" class=\"data row3 col0\" >min</td>\n",
-       "      <td id=\"T_50875_row3_col1\" class=\"data row3 col1\" >1</td>\n",
-       "      <td id=\"T_50875_row3_col2\" class=\"data row3 col2\" >0</td>\n",
+       "      <td id=\"T_e6e19_row3_col0\" class=\"data row3 col0\" >min</td>\n",
+       "      <td id=\"T_e6e19_row3_col1\" class=\"data row3 col1\" >1</td>\n",
+       "      <td id=\"T_e6e19_row3_col2\" class=\"data row3 col2\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_50875_row4_col0\" class=\"data row4 col0\" >25%</td>\n",
-       "      <td id=\"T_50875_row4_col1\" class=\"data row4 col1\" >1</td>\n",
-       "      <td id=\"T_50875_row4_col2\" class=\"data row4 col2\" >0</td>\n",
+       "      <td id=\"T_e6e19_row4_col0\" class=\"data row4 col0\" >25%</td>\n",
+       "      <td id=\"T_e6e19_row4_col1\" class=\"data row4 col1\" >1</td>\n",
+       "      <td id=\"T_e6e19_row4_col2\" class=\"data row4 col2\" >0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_50875_row5_col0\" class=\"data row5 col0\" >50%</td>\n",
-       "      <td id=\"T_50875_row5_col1\" class=\"data row5 col1\" >3</td>\n",
-       "      <td id=\"T_50875_row5_col2\" class=\"data row5 col2\" >1</td>\n",
+       "      <td id=\"T_e6e19_row5_col0\" class=\"data row5 col0\" >50%</td>\n",
+       "      <td id=\"T_e6e19_row5_col1\" class=\"data row5 col1\" >3</td>\n",
+       "      <td id=\"T_e6e19_row5_col2\" class=\"data row5 col2\" >1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_50875_row6_col0\" class=\"data row6 col0\" >75%</td>\n",
-       "      <td id=\"T_50875_row6_col1\" class=\"data row6 col1\" >4</td>\n",
-       "      <td id=\"T_50875_row6_col2\" class=\"data row6 col2\" >2</td>\n",
+       "      <td id=\"T_e6e19_row6_col0\" class=\"data row6 col0\" >75%</td>\n",
+       "      <td id=\"T_e6e19_row6_col1\" class=\"data row6 col1\" >4</td>\n",
+       "      <td id=\"T_e6e19_row6_col2\" class=\"data row6 col2\" >2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td id=\"T_50875_row7_col0\" class=\"data row7 col0\" >max</td>\n",
-       "      <td id=\"T_50875_row7_col1\" class=\"data row7 col1\" >11</td>\n",
-       "      <td id=\"T_50875_row7_col2\" class=\"data row7 col2\" >5</td>\n",
+       "      <td id=\"T_e6e19_row7_col0\" class=\"data row7 col0\" >max</td>\n",
+       "      <td id=\"T_e6e19_row7_col1\" class=\"data row7 col1\" >11</td>\n",
+       "      <td id=\"T_e6e19_row7_col2\" class=\"data row7 col2\" >5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x2ab478e3880>"
+       "<pandas.io.formats.style.Styler at 0x2ab497e7460>"
       ]
      },
      "metadata": {},
@@ -1957,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 509,
    "id": "c99ef6ef-f7e6-4ce9-b26f-f12a91c1fd58",
    "metadata": {},
    "outputs": [
@@ -2026,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 510,
    "id": "fe62e2e6-638e-4b0d-9d0b-c4c350a9cd8a",
    "metadata": {},
    "outputs": [
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 511,
    "id": "fa52bbb3-c58a-4bcb-84de-406cfeb08e16",
    "metadata": {},
    "outputs": [
@@ -2151,7 +2151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 512,
    "id": "8e9949a8-7a0e-4a3f-9373-5a8dd08967a4",
    "metadata": {},
    "outputs": [
@@ -2267,7 +2267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 513,
    "id": "e13863e5-3ff3-4f07-9d27-4963d6438414",
    "metadata": {},
    "outputs": [
@@ -2299,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 514,
    "id": "efa0b480-7e1c-4b10-85b4-88f5fe1ca188",
    "metadata": {},
    "outputs": [
